@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cardiomood.android"
-    android:versionCode="131"
-    android:versionName="1.3.1" >
+    android:versionCode="132"
+    android:versionName="1.3.2" >
 
     <uses-sdk
         android:minSdkVersion="14"
