@@ -5,6 +5,8 @@ import android.content.Context;
 import android.graphics.Color;
 import android.os.Bundle;
 import android.text.Html;
+import android.text.method.LinkMovementMethod;
+import android.text.util.Linkify;
 import android.widget.TextView;
 
 import com.cardiomood.android.R;
@@ -21,7 +23,7 @@ public class WhatsNewDialog extends Dialog {
 
     private static final String TAG = WhatsNewDialog.class.getSimpleName();
 
-    public static final String CONFIG_SHOW_DIALOG_ON_STARTUP = "app.whats_new.show_on_startup_v131";
+    public static final String CONFIG_SHOW_DIALOG_ON_STARTUP = "app.whats_new.show_on_startup_v132";
 
     private Context mContext;
 
@@ -39,6 +41,8 @@ public class WhatsNewDialog extends Dialog {
         tv.setText(Html.fromHtml(readRawTextFile(R.raw.whats_new)));
         tv.setLinkTextColor(Color.RED);
         tv.setLinksClickable(true);
+        tv.setMovementMethod(LinkMovementMethod.getInstance());
+        Linkify.addLinks(tv, Linkify.ALL);
     }
 
     public String readRawTextFile(int id) {
