@@ -1,3 +1,11 @@
+<p><b>New in CardioMood 1.3.2:</b><p>
+<p>
+This update fixes a reported device discovery issue for some phones.
+<br/>
+<br/>
+<b>Rate our app</b>: https://play.google.com/store/apps/details?id=com.cardiomood.android
+</p>
+<br/>
 <p><b>New in CardioMood 1.3.1:</b><p>
 <p>
 +++ Web-site launched!
@@ -10,7 +18,7 @@
 === Fixed a couple of bugs.
 <br/>
 <br/>
-<b>Rate our app</b> on <a href="https://play.google.com/store/apps/details?id=com.cardiomood.android">Google Play</a>!
+<b>Rate our app</b>: https://play.google.com/store/apps/details?id=com.cardiomood.android
 </p>
 <br/>
 <p><b>New in CardioMood 1.3:</b><p>
